--- a/blogapp/templates/editblog.html
+++ b/blogapp/templates/editblog.html
@@ -28,6 +28,11 @@
           {{form.image|add_class:"form-control"}}
         </div>
 
+        <div class="mb-3">
+          <label class="form-label">Save as</label>
+          {{form.status|add_class:"form-control"}}
+        </div>
+
         <input type="submit" class="btn btn-primary" value="POST">
       </form>
     </div>
