--- a/blogapp/templates/add-blog.html
+++ b/blogapp/templates/add-blog.html
@@ -4,17 +4,18 @@
 {% block content %}
 {% load widget_tweaks %}
 
-{% if messages %}
-  {% for msg in messages %}
-    <div class="alert alert-info" role="alert">
-      <strong>{{msg}}</strong>
-    </div>
-  {% endfor %}
-{% endif %}
+
 
 <div class="container mt-4 mb-4 p-4">
   <div class="row justify-content-center">
     <div class="col">
+      {% if messages %}
+      {% for msg in messages %}
+      <div class="alert alert-info" role="alert">
+        <strong>{{msg}}</strong>
+      </div>
+      {% endfor %}
+      {% endif %}
       <form method="POST" class="form-control" action="{% url 'addblog' %}" enctype="multipart/form-data">
         {% csrf_token%}
         <div class="mb-3">
@@ -34,6 +35,11 @@
         <div class="mb-3">
           <label class="form-label">Content</label>
           {{form.image|add_class:"form-control"}}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label"> Save as </label>
+          {{form.status|add_class:"form-control"}}
         </div>
 
         <input type="submit" class="btn btn-primary" value="POST">
