--- a/blogapp/templates/add-blog.html
+++ b/blogapp/templates/add-blog.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="mb-3">
-          <label class="form-label">Content</label>
+          <label class="form-label">Image</label>
           {{form.image|add_class:"form-control"}}
         </div>
 
